[package]
name = "beluga-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
flate2 = "1.0.34"
tracing = "0.1.40"
thiserror = "1.0.64"
